# Lab10_66050973

./: CMakeLists.txt  Readme.md
Shaders/: shader.frag  shader.vert
src/: main.cpp
src/Libs/: Mesh.cpp  Texture.cpp  Texture.h  stb_image.h
